# Oculus.Rift.DK2

./: README.md
Acid.Cam.VR/: Acid.Cam.VR  Makefile  README  ac.vr.mm  colors.h
Acid.Cam.VR-autotools.mac.osx/code/: Makefile.in  README  config.status  configure  configure.ac
Acid.Cam.VR-autotools.mac.osx/code/autom4te.cache/: output.0  requests  traces.0  traces.1
Acid.Cam.VR-autotools.mac.osx/code/frameworks/LibOVR.framework/Versions/A/Resources/: Info.plist
Acid.Cam.VR-autotools.mac.osx/code/source/: Makefile.am  Makefile.in  ac.h  ac.vr.cpp  alert_message.h  alert_message.mm  staticMakefile
Acid.Cam.VR-autotools.mac.osx/code/source/.deps/: ac.Po  ac.vr.Po  fractal.Po  pys.Po
Acid.Cam.VR/libs/: libopencv_calib3d.2.4.5.dylib  libopencv_calib3d.2.4.dylib  libopencv_contrib.2.4.5.dylib  libopencv_contrib.2.4.dylib  libopencv_core.2.4.10.dylib  libopencv_features2d.2.4.10.dylib  libopencv_features2d.2.4.5.dylib  libopencv_flann.2.4.10.dylib  libopencv_flann.2.4.5.dylib  libopencv_gpu.2.4.5.dylib  libopencv_highgui.2.4.5.dylib  libopencv_highgui.2.4.dylib  libopencv_imgproc.2.4.dylib  libopencv_legacy.2.4.dylib  libopencv_ml.2.4.10.dylib  libopencv_ml.2.4.5.dylib  libopencv_nonfree.2.4.5.dylib  libopencv_nonfree.2.4.dylib  libopencv_objdetect.2.4.10.dylib  libopencv_objdetect.2.4.5.dylib  libopencv_ocl.2.4.dylib  libopencv_photo.2.4.5.dylib  libopencv_photo.2.4.dylib  libopencv_stitching.2.4.10.dylib  libopencv_stitching.2.4.5.dylib  libopencv_superres.2.4.10.dylib  libopencv_superres.2.4.5.dylib  libopencv_ts.2.4.5.dylib  libopencv_video.2.4.10.dylib  libopencv_video.2.4.5.dylib  libopencv_videostab.2.4.10.dylib  libopencv_videostab.2.4.5.dylib
init_device/: Makefile  README  sdl-test.cpp
init_device/LibOVR.framework/Versions/A/: LibOVR
skeleton/code/: Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac
skeleton/code/autom4te.cache/: output.0  traces.0  traces.1
skeleton/code/source/: Makefile.am  Makefile.in  main.cpp
